# ai_service

./: .gitignore  README.md  pyproject.toml
apps/: config.py  endpoint.py  exceptions.py  main.py  schema.py
apps/crud/: metadb.py
apps/midjournies/: create_images.py
apps/openais/: assistants.py  messages.py  runs.py  threads.py
frontend/: package-lock.json  package.json
frontend/src/: index.tsx
frontend/src/my-app/: Main.tsx  MainPage.tsx
test/: api.http  midjourney.http
