[tool.poetry]
name = "ai_service"
version = "0.1.0"
description = "use for api"
authors = ["sdkim96"]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
openai = "^1.23.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.3.0"
langchain = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
